Fix dark mode and scrolling

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,13 +4,6 @@
 
 @tailwind utilities;
 
-@layer components {
-	.form-input {
-		@apply shadow-md focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md;
-		@apply dark:bg-black border-gray-700 text-white;
-	}
-}
-
 :root {
 	--theme-primary: theme('colors.green.900');
 	--theme-secondary: theme('colors.green.500');
@@ -21,4 +14,9 @@ body,
 html,
 #__next {
 	@apply dark:bg-black;
+}
+
+#__next {
+	position: relastive;
+	overflow-x: hidden;
 }
